--- a/HTML/countryDetails.html
+++ b/HTML/countryDetails.html
@@ -131,7 +131,57 @@
                     data-bind="attr:{src:'https://www.google.com/maps/embed/v1/place?key=AIzaSyAJLUALI140YZxYaSh3TN8hedXJEsm+1Bkg&q=' + Name()}"></iframe>
             </div>
         </div>
+        <div id="GRAFICO">
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
 
 
         <div class="accordion" id="accordionExample">
