--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -41,11 +41,10 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="aboutus.html"><i
-                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
+
                 </ul>
+                <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                            class="fa fa-heart-o text-danger"></i> Favorites</a></div>
                 <div class="Toggler" id="toggler"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
 
             </div>
@@ -61,19 +60,19 @@
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Projeto
+                        The Project
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body" style="text-align: center;">
-                        <p>Pretende-se com este trabalho prático, aplicar as diversas aprendizagens obtidas ao longo do
-                            semestre.</p>
-                        <p>Para tal, desenvolveu-se um site com o tópico "Olimpíadas".</p>
-                        <p>Relembrando que este site é <i>um mero modelo</i>, desenvolvido como trabalho final à cadeira
-                            de ITW orientada pelo Prof. Joaquim Sousa Pinto.</p>
-                        <p><strong> Para aceder ao site oficial das Olimpíadas, <a href="https://olympics.com/pt/"
-                                    class="text-decoration-none text-muted">clique aqui</a></strong>.</p>
+                        <p>This website aims to be a tool to apply various learnings obtained hroughout the
+                            semester.</p>
+                        <p>To do this, a website was developed on the topic "Olympics".</p>
+                        <p>Remembering that this website is <i>a mere model</i>, developed as a final work for the ITW
+                            course led by Prof. Joaquim Sousa Pinto.</p>
+                        <p><strong> To access the official Olympics website, <a href="https://olympics.com/pt/"
+                                    class="text-decoration-none text-muted">click here</a></strong>.</p>
                     </div>
                 </div>
             </div>
@@ -81,7 +80,7 @@
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Equipa de desenvolvimento
+                        Development Team
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
@@ -106,17 +105,18 @@
                 <h2 class="accordion-header" id="headingFour">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
-                        Departamento
+                        Department
                     </button>
                 </h2>
                 <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <h4><strong>DETI - Departamento de Electrónica, Telecomunicações e Informática</strong></h4>
-                        <p><b>Localizado em:</b> Universidade de Aveiro<br><b>Endereço:</b> 3810-193
-                            Aveiro<br><b>Telefone:</b> 234 370 355
-                            <br> Para mais informações, <a href="https://www.ua.pt/pt/deti/"
-                                class="text-decoration-none text-muted">clique aqui</a>.
+                        <h4><strong>DETI - The Department of Electronics, Telecommunications and Informatics</strong>
+                        </h4>
+                        <p><b>Located at:</b> Universidade de Aveiro<br><b>Adress:</b> 3810-193
+                            Aveiro<br><b>Phone Number:</b> 234 370 355
+                            <br> For more information, <a href="https://www.ua.pt/pt/deti/"
+                                class="text-decoration-none text-muted">click here</a>.
                         </p>
                         <iframe style="width:100%; height: 500px;" frameborder="0" scrolling="no" marginheight="0"
                             marginwidth="0" style="border: 1px solid black"
