--- a/HTML/index.html
+++ b/HTML/index.html
@@ -99,18 +99,17 @@
                                 class="fa fa-soccer-ball-o text-primary"></i> Modalities</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="graphics.html"><i
                                 class="fa fa-bar-chart text-primary"></i> Statistics</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                                class="fa fa-heart-o text-danger"></i> Favorites</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="aboutus.html"><i
-                                class="fa fa-address-book-o text-danger"></i> About us</a></li>
+
                 </ul>
 
                 <div>
-                    <form>
+                    <form class="pe-3">
                         <input class="form-control mr-sm-2" type="search" style="width:150px"
                             placeholder="Search Anything" spellcheck="false" id="tagsIndex" aria-label="Search">
                     </form>
                 </div>
+                <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
+                            class="fa fa-heart-o text-danger"></i> Favorites</a></div>
                 <div class="Toggler ps-2"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
             </div>
     </nav>
