--- a/HTML/modalitiesDetails.html
+++ b/HTML/modalitiesDetails.html
@@ -41,7 +41,7 @@
 
                 </ul>
                 <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                            class="fa fa-heart-o text-danger"></i> Favorites</a></div>
+                            class="fa fa-heart-o text-danger"></i> Favourites</a></div>
                 <div class="Toggler" id="toggler" style="cursor:pointer"> <i class="fa fa-sun-o fa-2x"
                         aria-hidden="true"></i> </div>
             </div>
