--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>ITW - Olympics test App</title>
+    <title>ITW - Olympics Website</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
@@ -304,6 +304,9 @@
             </div>
 
 
+            <div class="navbar-text" style=" cursor:wait">Made with <i class="fa fa-heart text-danger"></i> for
+                <a href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.
+            </div>
             <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                     data-bs-target="#modalId">
                     <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a>
