--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -185,7 +185,10 @@
                 <div><a style="text-decoration:none;color:black" href="aboutus.html" class="nome">
                         <b> <i class="fa fa-address-book" aria-hidden="true"></i> About Us</b></a>
                 </div>
-
+                <div class="navbar-text" style=" cursor:wait">Made with <i class="fa fa-heart text-danger"></i> for
+                    <a href="mailto:jsp@ua.pt" style=" cursor:wait"
+                        class="text-decoration-none text-muted">jsp@ua.pt</a>.
+                </div>
 
                 <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                         data-bs-target="#modalId">
