--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -163,17 +163,18 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a id="sortId" data-bind="attr:{href:'./athletes.html?sortby=Id'}" class="dropdown-item">Id</a></li>
                 <li><a id="sortNameUp" data-bind="attr:{href:'./athletes.html?sortby=NameUp'}"
-                        class="dropdown-item">Name Up</a></li>
+                        class="dropdown-item">Name Ascending</a></li>
                 <li><a id="sortNameDn" data-bind="attr:{href:'./athletes.html?sortby=NameDn'}"
-                        class="dropdown-item">Name Down</a></li>
+                        class="dropdown-item">Name Descending</a></li>
                 <li><a id="sortHeightUp" data-bind="attr:{href:'./athletes.html?sortby=HeightUp'}"
-                        class="dropdown-item">Height Up</a></li>
+                        class="dropdown-item">Height Ascending</a></li>
                 <li><a id="sortHeightDn" data-bind="attr:{href:'./athletes.html?sortby=HeightDn'}"
-                        class="dropdown-item">Height Down</a></li>
+                        class="dropdown-item">Height Descending</a></li>
                 <li><a id="sortSexUp" data-bind="attr:{href:'./athletes.html?sortby=SexUp'}" class="dropdown-item">Sex
-                        Up</a></li>
+                        (F to M)
+                    </a></li>
                 <li><a id="sortSexDn" data-bind="attr:{href:'./athletes.html?sortby=SexDn'}" class="dropdown-item">Sex
-                        Down</a></li>
+                        (M to F)</a></li>
                 <li><a id="sortBornDateUp" data-bind="attr:{href:'./athletes.html?sortby=BornDateUp'}"
                         class="dropdown-item">Born Date Up</a></li>
                 <li><a id="sortBornDateDn" data-bind="attr:{href:'./athletes.html?sortby=BornDateDn'}"
