--- a/HTML/favorites.html
+++ b/HTML/favorites.html
@@ -275,7 +275,7 @@
                 <div class="modal-body">
                     <div class="container-fluid">
 
-                        <form action="">
+                        <form name="Newsletter" action="http://192.168.160.36/FormEcho.aspx" method="post">
                             <div>
                                 <span
                                     style="font-family:'Times New Roman', Times, serif;font-size:24px;text-decoration:underline">
@@ -284,15 +284,15 @@
                             </div>
                             <br>
                             <div class="mb-3">
-                                <label for="" class="form-label">Email Adress</label>
-                                <input type="email" class="form-control" name="" id="" aria-describedby="emailHelpId"
-                                    placeholder="example@gmail.com" required>
+                                <label for="mail" class="form-label">Email Adress</label>
+                                <input type="email" class="form-control" name="Email" id="mail"
+                                    aria-describedby="emailHelpId" placeholder="example@gmail.com" required>
                             </div>
                             <div class="mb-3">
 
                                 <label for="validationDefault01" class="form-label">First name</label>
-                                <input type="text" class="form-control" id="validationDefault01" value=""
-                                    placeholder="Insert your name" required>
+                                <input type="text" name="FirstName" class="form-control" id="validationDefault01"
+                                    value="" placeholder="Insert your name" required>
                             </div>
                             <p style="height:30px;text-align:center;padding-bottom:0">
                                 <button type="submit" id="Subscribe" class="btn btn-lg btn-dark">Subscribe</button>
