--- a/HTML/countryDetails.html
+++ b/HTML/countryDetails.html
@@ -137,12 +137,12 @@
         <div class="accordion" id="accordionExample">
             <div class="accordion-item" data-bind="visible: Participant != '' && Participant() != null">
                 <h2 class="accordion-header" id="headingOne">
-                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         Participants
                     </button>
                 </h2>
-                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                <div id="collapseOne" class="accordion-collapse collapse collapse" aria-labelledby="headingOne"
                     data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <table class="table table-striped table-sm small">
