--- a/HTML/athletes.html
+++ b/HTML/athletes.html
@@ -163,9 +163,9 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a id="sortId" data-bind="attr:{href:'./athletes.html?sortby=Id'}" class="dropdown-item">Id</a></li>
                 <li><a id="sortNameUp" data-bind="attr:{href:'./athletes.html?sortby=NameUp'}"
-                        class="dropdown-item">Name Ascending</a></li>
+                        class="dropdown-item">Name Ascending (A-Z)</a></li>
                 <li><a id="sortNameDn" data-bind="attr:{href:'./athletes.html?sortby=NameDn'}"
-                        class="dropdown-item">Name Descending</a></li>
+                        class="dropdown-item">Name Descending (Z-A)</a></li>
                 <li><a id="sortHeightUp" data-bind="attr:{href:'./athletes.html?sortby=HeightUp'}"
                         class="dropdown-item">Height Ascending</a></li>
                 <li><a id="sortHeightDn" data-bind="attr:{href:'./athletes.html?sortby=HeightDn'}"
