--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,7 +22,7 @@
 
         .carousel-item {
             z-index: -100;
-            height: 800px;
+            height: 600px;
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -63,13 +63,9 @@
             text-shadow: 0 0 10px #000;
         }
 
-        body {
-            overflow: hidden;
-            /* Hide scrollbars */
-        }
 
         p {
-            padding-bottom: 140px;
+            padding-bottom: 0px;
         }
     </style>
 </head>
@@ -104,12 +100,12 @@
 
                 <div>
                     <form class="pe-3">
-                        <input class="form-control mr-sm-2" type="search" style="width:150px"
-                            placeholder="Search Anything" spellcheck="false" id="tagsIndex" aria-label="Search">
+                        <input class="form-control mr-sm-2" type="search" style="width:120px" placeholder="Search"
+                            spellcheck="false" id="tagsIndex" aria-label="Search">
                     </form>
                 </div>
                 <div class="pe-3"><a class="nav-link" aria-current="page" href="favorites.html"><i
-                            class="fa fa-heart-o text-danger"></i> Favorites</a></div>
+                            class="fa fa-heart-o text-danger"></i> </a></div>
                 <div class="Toggler ps-2"> <i class="fa fa-sun-o fa-2x" aria-hidden="true"></i> </div>
             </div>
     </nav>
@@ -304,9 +300,7 @@
             </div>
 
 
-            <div class="navbar-text" style=" cursor:wait">Made with <i class="fa fa-heart text-danger"></i> for
-                <a href="mailto:jsp@ua.pt" class="text-decoration-none text-muted">jsp@ua.pt</a>.
-            </div>
+
             <div><a style="text-decoration:none;color:black" href="" class="nome" data-bs-toggle="modal"
                     data-bs-target="#modalId">
                     <b> <i class="fa fa-newspaper-o" aria-hidden="true"></i> Subscribe to our Newsletter</b></a>
